# basic-neural-network

./: CMakeLists.txt  README.md  main.c  nn.c
datasets/color_classification/: colors_cielab.csv  labels.csv
datasets/logic_gates/: nor.csv
include/: activations.c  activations.h  color_classification.c  color_classification.h  custom_dataset.c  custom_dataset.h  dataset.c  dataset.h  logic_gates.c  logic_gates.h  matrix_s.c  matrixf_s.c  matrixf_s.h  mnist.c  mnist.h  network.c  network.h  tensorflow_addon.c  tensorflow_addon.h  training.c  training.h  ui.c  ui.h  user_io.c  user_io.h
models/color_classification/: model.csv
models/custom/: or.csv
models/mnist/: model.csv
src/: activations.c  activations.h  color_classification.c  color_classification.h  custom_dataset.c  custom_dataset.h  dataset.c  dataset.h  logic_gates.c  logic_gates.h  matrix_s.h  matrixf_s.c  mnist.c  network.c  training.h  ui.c  user_io.c  user_io.h
utils/color_classification/: select_color.py
utils/mnist/: draw.py  load_image.py
